--- a/admin/styles.css
+++ b/admin/styles.css
@@ -23,6 +23,7 @@
   height: 100%;
   background: var(--main-color);
   z-index: 100%;
+  transition: margin-left 300ms;
 }
 
 .sidebar-brand {
@@ -70,11 +71,38 @@
   width: 70px;
 }
 
+#nav-toggle:checked + .sidebar .sidebar-brand,
+#nav-toggle:checked + .sidebar li {
+  padding-left: 0.5rem;
+  text-align: center;
+}
+
+#nav-toggle:checked + .sidebar .sidebar-brand,
+#nav-toggle:checked + .sidebar li a {
+  padding-left: 1rem;
+}
+
+#nav-toggle:checked + .sidebar .sidebar-brand h2 span:last-child,
+#nav-toggle:checked + .sidebar li a span:last-child {
+  display: none;
+}
+
+#nav-toggle:checked ~ .main-content{
+  margin-left: 70px;
+}
+
+#nav-toggle:checked ~ .main-content header{
+  width: calc(100% - 70px);
+  left: 70px;
+}
+
 .main-content {
+  transition: margin-left 300ms;
   margin-left: 345px;
 }
 
 header {
+  background: #fff;
   display: flex;
   justify-content: space-between;
   padding: 1rem 1.5rem;
@@ -84,6 +112,7 @@ header {
   width: calc(100% - 345px);
   top: 0;
   z-index: 100;
+  transition: left 300ms;
 }
 
 #nav-toggle {
@@ -272,6 +301,121 @@ tr td:last-child {
   color: var(--main-color);
 }
 
-#nav-toggle {
-  display: none;
+@media only screen and (max-width: 1200px) {
+    .sidebar {
+      width: 70px;
+    }
+    
+    .sidebar .sidebar-brand,
+    .sidebar li {
+      padding-left: 0.5rem;
+      text-align: center;
+    }
+    
+    .sidebar .sidebar-brand,
+    .sidebar li a {
+      padding-left: 1rem;
+    }
+    
+    .sidebar .sidebar-brand h2 span:last-child,
+    .sidebar li a span:last-child {
+      display: none;
+    }
+    
+    .main-content{
+      margin-left: 70px;
+    }
+    
+    .main-content header{
+      width: calc(100% - 70px);
+      left: 70px;
+    }
+
+    .sidebar:hover{
+      width: 345px;
+      z-index: 200;
+    }
+    
+    .sidebar:hover .sidebar-brand,
+    .sidebar:hover li {
+      padding-left: 2rem;
+      text-align: left;
+    }
+    
+    .sidebar:hover li a {
+      padding-left: 1rem;
+    }
+    
+    .sidebar:hover .sidebar-brand h2 span:last-child,
+    .sidebar:hover li a span:last-child {
+      display: inline;
+    }
+}
+
+@media only screen and (max-width: 960px) {
+  .cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .recent-grid {
+    grid-template-columns: 60% 40%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .recent-grid {
+    grid-template-columns: 100%;
+  }
+
+  .sidebar {
+    left: -100% !important;
+  }
+
+  header h2 {
+    display: flex;
+    align-items: center;
+  }
+
+  header h2 label {
+    display: inline-block;
+    background: var(--main-color);
+    padding-right: 0rem;
+    margin-right: 1rem;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+  }
+
+  header h2 span {
+    text-align: center;
+    padding-right: 0rem;
+  }
+
+  header h2 {
+    font-size: 1.1rem;
+  }
+
+  .main-content {
+    width: 100%;
+    margin-left: 0rem;
+  }
+
+  header {
+    width: 100% !important;
+    left: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 560px) {
+  .cards {
+    grid-template-columns: 100%;
+  }
 }
