--- a/admin/styles.css
+++ b/admin/styles.css
@@ -13,8 +13,6 @@
   list-style-type: none;
   text-decoration: none;
   font-family: "Poppins", sans-serif;
-  overflow-y: hidden;
-  overflow-x: hidden;
 }
 
 .sidebar {
@@ -187,10 +185,7 @@ main {
 }
 
 .recent-grid {
-  margin-top: 3.5rem;
-  display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: 65% auto;
+  margin-top: 5.5rem;
 }
 
 .card {
@@ -224,8 +219,14 @@ table {
 }
 
 thead tr {
-  border-top: 1px solid #f0f0f0;
-  border-bottom: 2px solid #f0f0f0;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.orders-table td {
+  border: 1px solid #f0f0f0;
+  padding: 8px;
+  text-align: left;
 }
 
 thead td {
@@ -249,18 +250,6 @@ td .status {
 tr td:last-child {
   display: flex;
   align-items: center;
-}
-
-.status.purple {
-  background: rebeccapurple;
-}
-
-.status.pink {
-  background: deeppink;
-}
-
-.status.orange {
-  background: orangered;
 }
 
 .table-responsive {
@@ -532,4 +521,33 @@ hr.custom-hr-shop {
 .icon {
   filter: drop-shadow(4px 4px 8px rgba(0, 0, 0, 0.25));
   margin: 30px 0 0;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.pagination ul {
+  list-style-type: none;
+  padding: 0;
+}
+.pagination ul li {
+  display: inline;
+  margin: 0 5px;
+}
+.pagination ul li a {
+  text-decoration: none;
+  color: var(--main-color);
+  padding: 8px 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+.pagination ul li a:hover {
+  background-color: #ddd;
+}
+.pagination ul li a.active {
+  background-color: var(--main-color);
+  color: white;
+  border: 1px solid var(--main-color);
 }
