--- a/admin/styles.css
+++ b/admin/styles.css
@@ -63,6 +63,14 @@
   border-radius: 30px 0px 0px 30px;
 }
 
+.active {
+  background: #fff;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: var(--main-color);
+  border-radius: 30px 0px 0px 30px;
+}
+
 .sidebar-menu a span:first-child {
   font-size: 1.5rem;
   padding-right: 1rem;
