--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,11 @@
   .row-cards {
     gap: 30px;
   }
+
+  .carousel-item img {
+    max-width: 100%;
+    height: 15vh;
+  }
 }
 
 
@@ -1081,4 +1086,9 @@ body.dark-mode .btn-secondary {
   border-radius: 50%;
   margin: -5px;
   font-size: 1rem;
+}
+
+.carousel-item {
+  width: 100vw;
+  height: auto;
 }
