--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,11 @@
     max-width: 100%;
     height: 15vh;
   }
+
+  .container .text-center {
+    text-align: center;
+    padding: 15px;
+  }
 }
 
 
@@ -1080,12 +1085,14 @@ body.dark-mode .btn-secondary {
 .cart-quantity {
   background-color: #6221fe;
   color: #fff;
-  padding: 7px;
-  width: auto;
-  height: auto;
+  padding: 5px;
+  width: 5px;
+  height: 9px;
   border-radius: 50%;
   margin: -5px;
-  font-size: 1rem;
+  font-size: 0.6rem;
+
+  top: 15px;
 }
 
 .carousel-item {
@@ -1095,17 +1102,20 @@ body.dark-mode .btn-secondary {
 
 .estoque-true {
   color: #6222fe;
+  font-weight: bold;
 }
 
 .estoque-false {
-  color: #555;
-  opacity: 0.8;
+  color: #d4d4d4;
+  opacity: 0.9;
+  font-weight: bold;
 }
 
 .buy-button.disabled {
   /* Estilo do botão desativado */
-  background-color: #dfdfdf; /* Cor de fundo cinza */
+  background-color: #d4d4d4; /* Cor de fundo cinza */
   color: #000;
+  opacity: 0.8;
   cursor: not-allowed; /* Cursor inativo */
 }
 
@@ -1114,4 +1124,8 @@ body.dark-mode .btn-secondary {
   background-color: #cccccc; /* Cor de fundo cinza */
   color: #000;
   cursor: not-allowed; /* Cursor inativo */
+}
+
+.container .text-center {
+  text-align: center;
 }
